--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>PLAN XXI - Contact</title>
+    <title>PLAN XXII - Contact</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
 	    <meta http-equiv="cache-control" content="max-age=0" />
 <meta http-equiv="cache-control" content="no-cache" />
@@ -62,7 +62,7 @@
             <div class="clear"></div>  
             <div> 
               <h1>Contact Us</h1>  
-              <p><a href="mailto:cclub@ccowmu.org" shape="rect">Click Here to Email Us at: cclub@ccowmu.org.</a></p>
+              <p><a href="mailto:cclub@yakko.cs.wmich.edu" shape="rect">Click Here to Email Us at: cclub@ccowmu.org.</a></p>
 			  <p>Or Visit Us in: Room 2244, Kohrman Hall</p>
 			  <iframe width="920" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=kohrman+western+michigna+&amp;aq=&amp;sll=45.00109,-86.270553&amp;sspn=8.328413,4.438477&amp;ie=UTF8&amp;hq=&amp;hnear=Kohrman,+Kalamazoo,+Michigan+49006&amp;ll=42.280583,-85.617709&amp;spn=0.009891,0.021136&amp;t=m&amp;z=14&amp;output=embed"></iframe><br />
             </div> 
@@ -79,7 +79,7 @@
         <div style="padding-top:20px; color: #CCCCCC"> 
 
  If You Want To Sponsor Us, Email Us: 
-          <a href="mailto:plan@ccowmu.org" shape="rect">plan@ccowmu.org</a>
+          <a href="mailto:plan@yakko.cs.wmich.edu" shape="rect">plan@yakko.cs.wmich.edu</a>
         </div> 
       </div> 
     </div> 
