--- a/events.html
+++ b/events.html
@@ -64,7 +64,8 @@
               <h1><u>Events and Tournaments</u></h1>  
 			  <p>Other rooms are available. Start your own tourney, game of cards against humanity, or watch a movie.</p>
 	   		  <p style="font-size:17px; color:#000000"><br><b>IMPORTANT: Tournaments will start when scheduled. Please arrive early to make sure you're signed in!</b></p>
-              		  <p style="font-size:17px; color:#000000"><br><b>The Leauge of Legends Tournament and the CS:GO Tournament will take place simultaneously. Sorry:( <br></b></p>
+              		  <p>This site is under construction. Thank you for your patience.</p>
+					  <!--<p style="font-size:17px; color:#000000"><br><b>The Leauge of Legends Tournament and the CS:GO Tournament will take place simultaneously. Sorry:( <br></b></p>
 			   <p style="font-size:17px; color:#000000"><b>League of Legends Tournament</b></p>
 			  <p><b>WHEN:</b> Saturday, October 11, 2014 from 12pm EST until 12am EST.
 			  <br><b>DETAILS:</b> The League of Legends Tournament teams can be reserved before-hand on this site or will be decided on an ad-hoc basis.
@@ -107,8 +108,8 @@
 			  </p>
 			  
 			  <p>Additional Prizes TBD.</p>
-			  
-			  <iframe src="https://www.google.com/calendar/embed?showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=1147&amp;wkst=6&amp;bgcolor=%23FFFFFF&amp;src=flqj4kkqdficavhqsv8ec1hr3c%40group.calendar.google.com&amp;color=%234E5D6C&amp;ctz=America%2FNew_York&dates=20141010%2F20141012" style=" border-width:0 " width="1177" height="1147" frameborder="0" scrolling="no"></iframe>            </div> 
+			  -->
+			  <iframe src="https://www.google.com/calendar/embed?showNav=0&amp;showTabs=0&amp;showCalendars=0&amp;mode=WEEK&amp;height=1147&amp;wkst=6&amp;bgcolor=%23FFFFFF&amp;src=flqj4kkqdficavhqsv8ec1hr3c%40group.calendar.google.com&amp;color=%234E5D6C&amp;ctz=America%2FNew_York&dates=20150328%2F20150329" style=" border-width:0 " width="1177" height="1147" frameborder="0" scrolling="no"></iframe>            </div> 
           </div>  
           <div class="clear"></div> 
         </div>  
@@ -122,7 +123,7 @@
         <div style="padding-top:20px; color: #CCCCCC"> 
 
  If You Want To Sponsor Us, Email Us: 
-          <a href="mailto:plan@ccowmu.org" shape="rect">plan@ccowmu.org</a>
+          <a href="mailto:plan@yakko.cs.wmich.edu" shape="rect">plan@yakko.cs.wmich.edu</a>
         </div> 
       </div> 
     </div> 
