--- a/forum.html
+++ b/forum.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>PLAN XXI - Forum</title>
+    <title>PLAN XXII - Forum</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
 	    <meta http-equiv="cache-control" content="max-age=0" />
 <meta http-equiv="cache-control" content="no-cache" />
@@ -90,7 +90,7 @@
         <div style="padding-top:20px; color: #CCCCCC"> 
 
  If You Want To Sponsor Us, Email Us: 
-          <a href="mailto:plan@ccowmu.org" shape="rect">plan@ccowmu.org</a>
+          <a href="mailto:plan@yakko.cs.wmich.edu" shape="rect">plan@yakko.cs.wmich.edu</a>
         </div> 
       </div> 
     </div> 
