--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>PLAN XXI - Signup</title>
+    <title>PLAN XXII - Signup</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
 	    <meta http-equiv="cache-control" content="max-age=0" />
 <meta http-equiv="cache-control" content="no-cache" />
@@ -61,8 +61,8 @@
           <div style="margin-top:20px;"> 
             <div class="clear"></div>  
             <div> 
-		<iframe src="https://docs.google.com/forms/d/1Spfyc_M_ONVrhhrIsxgKdUc7GpVsu0wSmGX3UhKKoCA/viewform?embedded=true" width="920" height="1377" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-            </div> 
+		<!--<iframe src="https://docs.google.com/forms/d/1Spfyc_M_ONVrhhrIsxgKdUc7GpVsu0wSmGX3UhKKoCA/viewform?embedded=true" width="920" height="1377" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            --></div> 
           </div>  
           <h1 style="text-align:center;">To Pay for PLAN Now, Click The Button Below:<br></h1>
           <p style="text-align:center;">
@@ -88,7 +88,7 @@ Pay Now and We'll Give You a WristBand When You Get to PLAN!
         <div style="padding-top:20px; color: #CCCCCC"> 
 
  If You Want To Sponsor Us, Email Us: 
-          <a href="mailto:plan@ccowmu.org" shape="rect">plan@ccowmu.org</a>
+          <a href="mailto:plan@yakko.cs.wmich.edu" shape="rect">plan@yakko.cs.wmich.edu</a>
         </div> 
       </div> 
     </div> 
