--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
-    <title>PLAN XXI - About</title>
+    <title>PLAN XXII - About</title>
 	<link rel="shortcut icon" type="image/png" href="./images/icon.ico" />
 	    <meta http-equiv="cache-control" content="max-age=0" />
 <meta http-equiv="cache-control" content="no-cache" />
@@ -68,7 +68,7 @@
 			  <p style="font-size:17px; color:#000000"><b>What is PLAN?</b></p>
 			  <p>Grab your computer and get ready for some gaming! The "PLAN" (aka The Parkview LAN Party) is a LAN party hosted two times a year by the Computer Club of Western Michigan University. For the most part, we focus on playing Computer games, but there are also plenty of tabletop, arcade, and console games available. We also have technology demonstrations, food and beverages, raffles and prizes!</p>
 			  <p style="font-size:17px; color:#000000"><b>When is PLAN?</b></p>
-			  <p>PLAN is scheduled to start Friday, October 10th at 9pm and scheduled to end Sunday, October 12th.<br>For more timing and scheduling information go to: <a href="./events.html" shape="rect" target="_blank">Events</a>.</p>
+			  <p>PLAN is scheduled to start Saturday, May 28th<br>For more timing and scheduling information go to: <a href="./events.html" shape="rect" target="_blank">Events</a>.</p>
 			  <p style="font-size:17px; color:#000000"><b>Where is PLAN?</b></p>
 			  <p>College of Engineering & Applied Sciences<br>4601 Campus Drive<br>Kalamazoo, MI 49008</p>
 			  <iframe width="920" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=4601+Campus+Drive,+Kalamazoo,+MI&amp;aq=0&amp;oq=4601+Campus+Dr&amp;sll=45.00109,-86.270553&amp;sspn=9.678897,21.643066&amp;t=m&amp;ie=UTF8&amp;hq=&amp;hnear=4601+Campus+Dr,+Kalamazoo,+Michigan+49008&amp;ll=42.254136,-85.640683&amp;spn=0.019788,0.042272&amp;z=14&amp;output=embed"></iframe><br />
@@ -100,7 +100,7 @@
         <div style="padding-top:20px; color: #CCCCCC"> 
 
  If You Want To Sponsor Us, Email Us: 
-          <a href="mailto:plan@ccowmu.org" shape="rect">plan@ccowmu.org</a>
+          <a href="mailto:plan@yakko.cs.wmich.edu" shape="rect">plan@yakko.cs.wmich.edu</a>
         </div> 
       </div> 
     </div> 
