--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ th, td {
           </div>  
           <div class="clear"></div> 
           <h1>Sponsors:</h1>
-          <img src="./images/fanfare.png"><img src="./images/shop.jpg"><img src="./images/riot.jpg>"
+          <img src="./images/fanfare.png"><img src="./images/shop.jpg"><img src="./images/riot.jpg">
         </div>  
         <!-- end content -->  
 	<div id="banner" class="slideshowContainer"> 
