--- a/events.html
+++ b/events.html
@@ -87,7 +87,12 @@
 			  <p><b>WHEN:</b> Saturday, March 28, 2015. 12pm - 4:30pm.
 			  <br><b>ROOM:</b> D-204 & D-205
 			  <br><b>DETAILS:</b> The Halo 4 Tournament teams can be reserved before-hand on this site or will be decided on an ad-hoc basis.<br>
-			  The tournament will be in a 4 v 4 Mixed. So teams can be no larger than 4 players. More details will be posted as they arrive.
+			  The tournament will be in a 4 v 4 Mixed. So teams can be no larger than 4 players.<br>
+			  The tournament will be structured as a best 2/3, single elimination tournament.<br>
+			  Each match of each round will have a different format:<br>
+			  Match 1: Team Slayer<br>
+			  Match 2: Capture the Flag<br>
+			  Match 3: Either (to be voted on)
 			  <br>
 			  
 			  <br><b><u>Prizes for Halo 4 Tournament:</u></b>
