--- a/events.html
+++ b/events.html
@@ -137,7 +137,7 @@
 			  <p style="font-size:17px; color:#000000"><b>Magic: The Gathering Tournament</b></p>
 			  <p><b>WHEN:</b> Sunday, March 29, 2015. 12pm - 4pm.
 			  <br><b>ROOM:</b> D-204 & D-205
-			  <br><b>DETAILS:</b> The format of the Magic: The Gathering Tournament will be a booster draft. Bring between $10-$18 for purchasing cards.
+			  <br><b>DETAILS:</b> The format of the Magic: The Gathering Tournament will be a booster draft. Bring between $10 for purchasing cards.
 			  <br>There is a tournament cap at 32 players and it is first-come, first-serve. So, if you'd like to participate in the Magic tournament, please preregister.
 			  <br>
 			  <br><b>Prizes for the Magic: the Gathering Tournament:</b>
